--- a/gallery.html
+++ b/gallery.html
@@ -75,15 +75,24 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
               <li class="treeview">
-                <a href="home.html" target="_top">
-                  <i class="fa fa-home"></i> <span>HOME</span>
-                </a>
                 <a href="#">
+                  <i class="fa fa-home"></i> <span>HOME</span>
+                </a>                
+              </li>
+              <li class="treeview">
+                <a href="gallery.html" target="_top">
                   <i class="fa fa-picture-o"></i> <span>GALLERY</span>
-                </a>
+                </a>              
+              </li>
+              <li class="treeview">
                 <a href="contact.html" target="_top">
                   <i class="fa fa-paper-plane-o"></i> <span>CONTACT</span>
-                </a>
+                </a>               
+              </li>
+              <li class="treeview">
+                <a href="miniGames.html" target="_top">
+                  <i class="fa fa-gamepad"></i> <span>MINI GAMES</span>
+                </a>          
               </li>
             </ul>
           </section>
