--- a/miniGames.html
+++ b/miniGames.html
@@ -114,7 +114,7 @@
             <div class ="row">
                 <div class="col-lg-12 col-s-6">
                 <!-- small box -->
-                  <div class="small-box" style="background-color: #31312E;color: lavenderblush;">
+                  <div class="small-box" style="background-color: #DEB79B;color: whitesmoke;">
                     <div class="inner">
                       <h3 style="font-family: 'Courier New'; padding: 10px;">Number Guessing Game</h3>
                         <p style="font-family: 'Courier New';padding: auto;">&emsp;&emsp;&emsp; We have selected a random number between 1 and 100.See if you can guess it 
@@ -139,7 +139,7 @@
                         </div>
                         <div class = "hidejs">
                             <p class = "previous">Previous:<br></p>
-                            <p class = "result" style="color: white"> <br></p>
+                            <p class = "result" style="color: whitesmoke"> <br></p>
                             <p class = "hint"> <br></p>
                             <button class = "new">Start new game</button>
                         </div>
