--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
               <li class="treeview">
-                <a href="#">
+                <a href="home.html">
                   <i class="fa fa-home"></i> <span>HOME</span>
                 </a>                
               </li>
@@ -85,7 +85,7 @@
                 </a>              
               </li>
               <li class="treeview">
-                <a href="contact.html" target="_top">
+                <a href="#" target="_top">
                   <i class="fa fa-paper-plane-o"></i> <span>CONTACT</span>
                 </a>               
               </li>
