--- a/gallery.html
+++ b/gallery.html
@@ -75,12 +75,12 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
               <li class="treeview">
-                <a href="#">
+                <a href="home.html">
                   <i class="fa fa-home"></i> <span>HOME</span>
                 </a>                
               </li>
               <li class="treeview">
-                <a href="gallery.html" target="_top">
+                <a href="#" target="_top">
                   <i class="fa fa-picture-o"></i> <span>GALLERY</span>
                 </a>              
               </li>
