--- a/miniGames.html
+++ b/miniGames.html
@@ -75,7 +75,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" >
                 <li class="treeview">
-                    <a href="#">
+                    <a href="home.html">
                       <i class="fa fa-home"></i> <span>HOME</span>
                     </a>                
                   </li>
@@ -90,7 +90,7 @@
                     </a>               
                   </li>
                   <li class="treeview">
-                    <a href="miniGames.html" target="_top">
+                    <a href="#" target="_top">
                       <i class="fa fa-gamepad"></i> <span>MINI GAMES</span>
                     </a>          
                   </li>
