--- a/miniGames.html
+++ b/miniGames.html
@@ -141,7 +141,10 @@
                             <p class = "previous">Previous:<br></p>
                             <p class = "result" style="color: whitesmoke"> <br></p>
                             <p class = "hint"> <br></p>
-                            <button class = "new">Start new game</button>
+                            
+                        </div>
+                        <div class="row">
+                            <button type="newgames" class = "new">Start new game</button>
                         </div>
                     </form>
                 </div>
