--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 
         <header class="main-header" style = "background-color: #31312E;">
           <!-- Logo -->
-          <a href="/" class="logo" style = "background-color: #31312E;">
+          <a href="#" class="logo" style = "background-color: #31312E;">
             <!-- mini logo for sidebar mini 50x50 pixels -->
              <!--<span class="logo-mini"><b>B</b>LT</span> -->   
             <!-- logo for regular state and mobile devices -->
