--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" 
     integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <!-- Ionicons -->
-    <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.0/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -64,7 +64,7 @@
                 <img src="dist/img/me.png" class="img-circle" alt="User Image">
               </div>
               <div class="pull-left info">
-                <p>Kansiree Lee</p>
+                <p style="padding: auto; margin-top:10px;">Kansiree Lee</p>
                 <!-- <a href="#"><i class="fa fa-circle text-success"></i> Online</a> -->
               </div>
             </div>
@@ -153,7 +153,7 @@
                     <h1 class="widget-user-username" style ="color: lavenderblush;font-family: Cambria;"><b>Kansiree Lee</b></h1>
                     <h4 class="widget-user-desc" style ="color: lavenderblush;font-family: Cambria;">Faculty of Computer Engineering</h4>
                     <h5>
-                       <a class = "mail" href = "mailto:Kansiree_lee@cmu.ac.th"> Kansiree_lee@cmu.ac.th </a>
+                       <a class = "mail" href = "mailto:Kansiree_lee@cmu.ac.th" style="color: #DEB79B;"> Kansiree_lee@cmu.ac.th </a>
                     </h5>
                     <h5 style ="color: lavenderblush;">(+66)-93-296-8089</h5>
                   </div>
